[package]
name = "hunt-summary-extractor"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.27.1", features = ["serialize"]}
serde = { version = "1.0.152", features = ["derive"]}
regex = "1.7.1"
clap = { version = "4.1.4", features = ["derive"]}
directories = "4.0.1"
chrono = "0.4.23"
notify = "5.1.0"
notify-debouncer-mini = "0.2.1"